explanation halfcommit